src/SchedulePlanner/Schedule/ScheduleGrid.module.scss
// ScheduleGrid.module.scss
@use '../../global/mixins' as mixins;
@use '../../global/variables' as vars;

.calendar {
  @include mixins.flex(column);
  height: 100%;
  width: 100%;

  &__header {
    width: 100%;
    height: 6rem;
  }

  &__grid {
    @include mixins.flex(column);
    @include mixins.glass-effect;
    width: 100%;
    height: calc(100% - 6rem);
    position: relative;
  }
  
  &__days_row {
    @include mixins.flex(row, space-evenly, center);
    @include mixins.text-light;
    height: 1.5rem;
    border-radius: 1rem 1rem 0 0;
    background-color: vars.$calendar-days-row-bg;
    cursor: default;
  }

  &__content {
    @include mixins.flex(row, space-evenly, start);
    @include mixins.scrollable;
    max-height: 50.5rem;
  }
    
  &__hours_column {
    @include mixins.flex(column, space-evenly);
    flex: 1;
    text-align: right;
  }

  &__hour_tag {
    @include mixins.calendar-cell;
    @include mixins.text-light;
    padding-right: 1rem;
    text-align: right;
  }

  &__appointments {
    @include mixins.flex(row, space-evenly, center);
    flex: 7;
    height: 100%;
    
    &_column {
      @include mixins.flex(column, start, center);
      height: 100%;
      flex: 14;
    }
  }
}

